# CUSP

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakeLists_pvtr.txt  README.md  data_analysis.sh  extract_files.sh  extract_files.sh.o1276467  extract_files.sh.o1285999  import_data.py  import_data.py.save  mp_topology.o1352085  mp_topology.o1352281  mp_topology.o1352743  mp_topology.o1353094  mp_topology.o1353195  mp_topology.o1353226  mp_topology.o1357279  mp_topology.o1361559  mp_topology.o1361584  mp_topology.o1361622  mp_topology.o1361904  mp_topology.o1361936  mp_topology.o1362031  mp_topology.o1363927  mp_topology.o1364039  mp_topology.o1364063  mp_topology.o1364080  mp_topology.o1364140  mp_topology.o1367349  mp_topology.o1367455  mp_topology.o1371406  mp_topology.o1372574  mp_topology.o1372749  mp_topology.o1373006  mp_topology.o1374676  mp_topology.o1375283  print_csv.csv  print_csv.sh  read_and_write.sh  (+27 more)
.github/workflows/: wheels.yml
.result_folder/: great_analysis866515.csv
gorgon_tools/: __init__.py  meson.build  version.py
gorgon_tools/geomagnetic/: CIM.py  __init__.py  benchmarks.py  calcdeltaB.py  coordinates.py  dB_import.py  elecproject.py  igrf.py  meson.build  visualise.py
gorgon_tools/geomagnetic/fortran_src/: igrf_calc.f90
gorgon_tools/ionosphere/: IS_import.py  __init__.py  analysis.py  visualise.py
gorgon_tools/legacy/: __init__.py  vtk_to_numpy.py  vtk_to_numpy_legacy.py
gorgon_tools/magnetosphere/: __init__.py  boundary.py  connectivity.py  decomp.py  fieldlines.py  gorgon_import.py  meson.build  null_points.py  streamline.py  visualise.py  vortex.py
gorgon_tools/misc/: __init__.py  derived_parameters.py
gorgon_tools/models/: __init__.py  bowshock.py  magnetopause.py
gorgon_tools/scripts/: ARES.py  ae_calc.py  ae_plot.py  calc_station.py  diagnostics.py  get_UT0.py  get_dipole.py  gorgon_report_functions.py  plot_IS_time.py  plot_MS_time.py  setup_sim.py  stations.py
gorgon_tools/solar_wind/: SW_data.py  __init__.py  visualise.py
gorgon_tools/tests/: __init__.py  test_imports.py  test_notebooks.py
headers_cpp/: analysis.h  centerline.h  extend_streamlines.h  fit_to_analytical.h  magnetopause.h  matrix.h  points.h  preprocessing.h  raycast.h  read_file.h  read_pvtr.h  reader_writer.h  streamlines.h
jobs/: data_analysis.sh  final_data_analysis.o877046  final_data_anlysis.sh  great_analysis.o867056  great_analysis.sh  new_build.sh  print_csv.sh  read_and_write.sh  rebuild.sh  run.sh  small_test.sh
library_python/: CMakeLists.txt  README.md  imports.sh  library.cpp  pyproject.toml
library_python/mag_cusp/: __init__.py  __init__.pyi
library_python/mag_cusps/: __init__.py  __init__.pyi
library_python/mag_cusps/models/: evaluation_prediction_model_Liu12.pkl  evaluation_prediction_model_Rolland25.pkl  evaluation_prediction_model_Shue97.pkl
main_cpp/: full_process.cpp  great_analysis.cpp  read_and_write.cpp
output_cpp/: Makefile  extend_streamlines_test  full_process_test  interest_points_test  magnetopause_test  preprocessing_test  raycast_test  streamlines_benchmark  streamlines_test
python/: cast_fit_plot.py  cross_validation.py  current_sheet.py  cusps.py  cusps_new.py  data_analysis.py  earth_pos_detection.py  evaluation_prediction_model.pkl  evaluation_prediction_model_Liu12.pkl  evaluation_prediction_model_Rolland25.pkl  evaluation_prediction_model_Shue97.pkl  final_data_analysis.py  fit_to_analytical.py  fit_to_analytical.sh  fit_to_analytical.sh.o1283510  fit_to_analytical.sh.o1283535  gorgon.py  gorgon_vs_lin10.py  gorgon_vs_liu12.py  guess.py  is_flat.py  library_test.py  line_guess.py  plot_ray_casting.py  predictions.py  shue97.py  skeleton.py  streamlines_3d.py  streamlines_from_MP.py  swmf_test.py  visualization.ipynb  visualzation_requirements.txt
python/old/: 3d_ray_casting.py  cpp_streamlines.py  current_density.py  edge_detector.py  edge_detector_3d.py  equipotential.py  gaussian.py  gradients_display.py  hdf5_to_list.py  null_points_3d.py  one_slice.py  ray_tracing.py  slices_anim.py  streamlines_3d.py
python_library/: CMakeLists.txt  python_library.cpp  setup.py
src_cpp/: analysis.cpp  centerline.cpp  extend_streamlines.cpp  fit_to_analytical.cpp  magnetopause.cpp  matrix.cpp  points.cpp  preprocessing.cpp  raycast.cpp  read_file.cpp  read_pvtr.cpp  reader_writer.cpp  streamlines.cpp
test_data/: x00_jvec-21000.pvtr
tests_cpp/: centerline_test.cpp  extend_streamlines_test.cpp  fit_to_analytical_test.cpp  full_process_test.cpp  interest_points_test.cpp  magnetopause_test.cpp  preprocessing_test.cpp  raycast_test.cpp  read_file_test.cpp  read_pvtr_test.cpp  streamlines_benchmark.cpp  streamlines_test.cpp
topology_analysis/: CMakeLists.txt  README.md  imports.sh  library.cpp  pyproject.toml  setup.py
topology_analysis/topology_analysis/: __init__.py  __init__.pyi
